--- a/Heroku/frontend/src/planner/styles/_plans.scss
+++ b/Heroku/frontend/src/planner/styles/_plans.scss
@@ -12,6 +12,13 @@ $card-distance: 4px;
 		// align with plan cards (.plans padding + .plan margin + visual flick)
 		padding: 10px 2 * $card-distance + 2px;
 	}
+	
+	.schedule-explorer {
+		top: -2px;
+		position: relative;
+		margin-left: 4px;
+		margin-right: 2px;
+	}
 }
 
 .plans {
